[project]
name = "chipflow_orfs"
description = "Simple packaging of ORFS, stripped down"
authors = [
    {name = "Rob Taylor", email = "rob.taylor@chipflow.io"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[pytest]
norecursedirs = "vendor"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
test.cmd = "pytest"

[tool.pdm.build]
includes=['chipflow-orfs']
source-includes = [
    "vendor/orfs/flow/scripts",
    "vendor/orfs/flow/util",
    "vendor/orfs/flow/platforms",
    "vendor/orfs/flow/designs/**/config.mk",
]

[tool.pdm.build.wheel-data]
data = [
    {path = "vendor/orfs/flow/scripts/**/*", relative-to = "vendor/orfs"},
    {path = "vendor/orfs/flow/util/**/*", relative-to = "vendor/orfs"},
    {path = "vendor/orfs/flow/platforms/sky*/**/*", relative-to = "vendor/orfs"},
    {path = "vendor/orfs/flow/platforms/gf*/**/*", relative-to = "vendor/orfs"},
    {path = "vendor/orfs/flow/platforms/ihp*/**/*", relative-to = "vendor/orfs"},
    {path = "vendor/orfs/flow/designs/**/config.mk", relative-to = "vendor/orfs"},
]

[dependency-groups]
test = [
    "pytest>=8.3.4",
]
